# atlas-qe-workflow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_eos_workflow.py  run_eos_workflow_new.py  run_tests.py  test_core_functionality.py
aqflow/: board.json
aqflow/core/: __init__.py  cache.py  configuration.py  energy.py  eos.py  eos_controller.py  eos_post.py  executor.py  models.py  process_orchestrator.py  pseudopotential.py  resources_simple.py  state_machine.py  task_creation.py  task_processing.py  task_utils.py  tasks.py  template_engine.py
aqflow/scripts/: __init__.py  aqflow.py
aqflow/software/: __init__.py  atlas.py  base.py  parsers.py  qe.py
aqflow/utils/: __init__.py  file_management.py  logging_config.py  structure_generation.py
archive/legacy/: manage_resources.py  monitor_distributed_workflow.py  query_tasks.py
archive/legacy/core/: cache_system.py  example_engine.py  remote_executor.py  workflow_engine.py
config/: resources.yaml  resources_test.yaml  software_paths.yaml
config/systems/: GaAs_realistic.yaml  MgAl_study.yaml  Mg_study.yaml
data/: .gitkeep
examples/gaas_eos_study/: POSCAR  POSCAR_wurtzite  as.lda.lpp.lpp_density.UPF  atlas_mg.in.template  gaas_eos_study.yaml  job.in.template  job_mg.in.template
examples/test_qe_small/: ga.lda.lpp.lpp_density.UPF  job.in.template  test_qe_small.yaml
examples/test_small/: as.lda.nlpp.UPF  atlas.in.template  test_small.yaml
examples/test_small/data/pseudopotentials/: as.lda.lpp.nlpp_density.UPF  ga.lda.lpp.nlpp_density.UPF  ga.lda.nlpp.UPF
monitoring/: metrics.db
scripts/: aqflow.py  atlas_cli.py  eos_paraA_compare.py  eos_param_fit.py  manage_resources.py  monitor_distributed_workflow.py  run_distributed_workflow.py  run_eos_workflow_modular.py  task_service.py
src/: __init__.py
src/aqflow/: __init__.py
src/calculators/: __init__.py  atlas_interface.py  base_calculator.py  qe_interface.py
src/core/: __init__.py  configuration.py  distributed_scheduler.py  eos_workflow.py  error_handler.py  execution_engine.py  monitoring_system.py  parameter_set.py  pseudopotential.py  resource_manager.py  resources_simple.py  task_creation.py  task_manager.py  task_processing.py  template_engine.py
src/scripts/: __init__.py  full_materials_workflow.py
src/software/: atlas.py  base.py  qe.py
src/utils/: logging_config.py  structure_generation.py
tests/: __init__.py  test_executor_pure.py  test_models.py  test_parameter_set.py  test_pseudopotential.py  test_structure_generation.py
