[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-qe-workflow"
version = "0.1.0"
description = "Automated materials calculation workflow for ATLAS-QE with parameter set management and intelligent caching"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TB-OFDFT Project Team"}
]
keywords = ["materials", "DFT", "OFDFT", "ATLAS", "quantum-espresso", "workflow", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "pymatgen>=2023.8.10",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "pydantic>=2.6.0",
    "plotly>=5.15.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "h5py>=3.8.0",
    "ase>=3.22.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
aqflow = "aqflow.scripts.aqflow:main"

[project.urls]
Homepage = "https://github.com/TB-OFDFT/atlas-qe-workflow"
Documentation = "https://atlas-qe-workflow.readthedocs.io"
Repository = "https://github.com/TB-OFDFT/atlas-qe-workflow.git"
Issues = "https://github.com/TB-OFDFT/atlas-qe-workflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["aqflow*"]

[tool.setuptools.package-data]
"aqflow" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=aqflow --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymatgen.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ase.*"
ignore_missing_imports = true
